# quest-questionnaire-panel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
android-caller-sdk/: README.md  build.gradle.kts
app/: build.gradle.kts
brb-questionnaire-core/: build.gradle.kts
contract/: README.md  intents.md  quest.questionnaire.v1.request.schema.json  quest.questionnaire.v1.result.schema.json
docs/: ITERATION-generalization.md  WORKPLAN.md  browser-panel-preview-workflow.md  contract-versioning.md  demo-capture-workflow.md  handoff-contract.md  handoff-prompt.md  index.html  makepad-gui-platform-strategy.md  quest-uiautomator-capability-map.md  quest-uiautomator-command-database.jsonl  quest-uiautomator-runbook.md  recording-comparison-matrix.md  remote-operations-relationship.md  research-data-safety.md  rusty-morphospace-maia-spatial.md  self-update.md  source-audit-intake-2026-06-14.md  styles.css  validation-matrix.md  windows-makepad-operator.md
examples/: README.md
gradle/: libs.versions.toml
maia-spatial-questionnaire-core/: build.gradle.kts
operator/makepad-quest-questionnaire-operator/: Cargo.toml  MakepadBaseline.toml  README.md
operator/makepad-quest-questionnaire-operator/src/: app.rs  cli.rs  cli_main.rs  command_surface.rs  device.rs  lib.rs  lsl_runtime.rs  main.rs  profile.rs  protocol.rs  ui.rs
questionnaire-contract-core/: build.gradle.kts
tools/: Export-PanelRenderSequence.ps1  Run-BrbRecordingComparison.ps1  check_public_artifacts.py
unity-caller-plugin/: README.md  build.gradle.kts  (+1 more)
(+154 files in other folders)
